# letsbuilda-pypi

./: README.md  make.ps1  pyproject.toml  temp.py
.devcontainer/: devcontainer-lock.json
.github/workflows/: dependency-review.yaml  python-ci.yaml  python-publish-pypi.yaml  python-pypi-publish.yaml
docs/source/: changelog.rst  conf.py  index.rst
src/letsbuilda/pypi/: __init__.py  async_client.py  client.py  distributions.py  exceptions.py  files.py  models.py  sync_client.py
src/letsbuilda/pypi/clients/: __init__.py  async_client.py  sync_client.py
src/letsbuilda/pypi/models/: __init__.py  models_json.py  models_package.py  models_rss.py
tests/: json_api_response.json  test_json_api_parsing.py  test_new_packages_feed.py  test_rss_feed_parsing.py
