[project]
name = "letsbuilda-pypi"
version = "5.1.0"
description = "A wrapper for PyPI's API and RSS feed"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "xmltodict",
]

[project.urls]
repository = "https://github.com/letsbuilda/letsbuilda-pypi/"
documentation = "https://docs.letsbuilda.dev/letsbuilda-pypi/"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
    "types-xmltodict",
]
tests = [
    "pytest",
]
docs = [
    "sphinx",
    "furo",
    "sphinx-autoapi",
    "releases",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"letsbuilda.pypi" = ["py.typed"]

[tool.ruff]
preview = true
unsafe-fixes = true
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY001", # (Missing copyright notice at top of file)
    "PLC0414", # (Import alias does not rename original package) - Re-exporting
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
    "FA102", # (Missing `from __future__ import annotations`, but uses PEP 585 collection) - Docs are actually built on the latest stable release of Python
]
"tests/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Tests are not modules
    "S101", # (Use of `assert` detected) - Yes, that's the point
]

[tool.ruff.lint.isort]
known-first-party = ["letsbuilda.pypi"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.coverage.run]
source = [
    "letsbuilda.pypi",
]
